# dbx-unifiedchat

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_PY_REFACTORING.md  ARCHITECTURE.md  CLARIFICATION_INTENT_DETECTION_GUIDE.md  CLARIFICATION_SIMPLIFICATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DOCUMENTATION_INDEX.md  ENV_VARIABLES_DEPLOYMENT.md  FEIP_SUBMISSION.md  FEIP_SUBMISSION_UPDATES.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_04_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INSTALLATION_SUMMARY.md  MARKDOWN_FORMATTING_IMPLEMENTATION.md  MARKDOWN_UI_DISPLAY_FIX.md  MLFLOW_TRACING_FIX_QUICKSTART.md  MLFLOW_TRACING_FIX_SUMMARY.md  MODELCONFIG_MIGRATION_SUMMARY.md  MODELCONFIG_REFACTORING.md  Makefile  NOTEBOOK_EXECUTION_ORDER.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  RUNNABLE_PARALLEL_UPGRADE.md  RUNNABLE_PARALLEL_UPGRADE_SUMMARY.md  STATE_RESET_IMPLEMENTATION.md  STREAMING_BEFORE_AFTER_COMPARISON.md  STREAMING_DISPLAY_IMPROVEMENTS.md  STREAMING_FIX_FINAL_SUMMARY.md  STREAMING_FIX_SUMMARY.md  (+22 more)
agent_app/: .env.example  .gitignore  README.md  app.py  app.yaml  databricks.local.yml.example  databricks.yml  pyproject.toml  requirements.txt  run-local.sh
agent_app/agent_server/: agent.py  mlflow_span_context.py  rechart_api.py  result_cache.py  start_server.py
agent_app/e2e-chatbot-app-next/: app.yaml  package-lock.json  package.json
agent_app/resources/: app.yml  database.yml  jobs.yml  schemas.yml
agent_app/scripts/: deploy.sh  (+9 more)
(+201 files in other folders)
